--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,14 +1,12 @@
 ---
-layout: default
+layout: master
 ---
-<div class="post">
-
-  <header class="post-header">
-    <h1 class="post-title">{{ page.title }}</h1>
-  </header>
-
-  <article class="post-content">
+<div class="page-content">
+    <header>
+        <h1 class="main-title">@abuelwafa{% if page.title %}: {{ page.title }}{% endif %}</h1>
+        {% if page.url != "/" %}
+            <p class="home-link"><a href="/">Back to home</a></p>
+        {% endif %}
+    </header>
     {{ content }}
-  </article>
-
 </div>
